syntax = "proto3";
package pb;
option go_package = "github.com/doublemo/baa/internal/proto/pb";

message Agent {
    message Handshake {
        int64 E1 = 1;
        int64 E2 = 2;
    }

    message Heartbeater {
        int64 R = 1;
    }

    message Webrtc{
        message Trickle {
            string Candidate = 1;
        }

        message Signal {
            oneof Payload {
                bytes Description = 1;
                Trickle Trickle = 2;
                string IceConnectionState = 3;
            }
        }
    }

    message KickedOut {
        repeated string PeerID = 1;
    }

    message BroadcastMessage {
        repeated string  Receiver = 1;
        int32   Command  = 2;
        bytes  Payload    = 3;
        int32  SubCommand = 4;
    }

    message Broadcast{
        repeated BroadcastMessage Messages = 1;
    }
}